listar matricula en proceso